# render_playground

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  FindDirectX11.cmake  README.md  build.cmd  cmake_utils.cmake  vcpkg-configuration.json  vcpkg.json
assets/backpack/: README.md
assets/dragon/: README.md
assets/skull/: README.md
assets/trex/: README.md
shaders/: common_basic_phong_lighting.hlsl  common_gooch_shading.hlsl  common_lines.hlsl  ps_basic_phong_lighting.hlsl  ps_gooch_shading.hlsl  ps_lines.hlsl  ps_normals.hlsl  ps_vertices_only.hlsl  vs_basic_phong_lighting.hlsl  vs_gooch_shading.hlsl  vs_lines.hlsl  vs_normals.hlsl  vs_vertices_only.hlsl
src/: CMakeLists.txt  app_state.cpp  app_state.h  assimp_model.cpp  assimp_model.h  dx_api.h  imgui_state_debug.cpp  imgui_state_debug.h  main.cpp  model.cpp  model.h  predefined_objects.cpp  predefined_objects.h  render_lines.cpp  render_lines.h  render_model.cpp  render_model.h  render_vertices_only.cpp  render_vertices_only.h  render_with_normals.cpp  render_with_normals.h  shaders_compiler.cpp  shaders_compiler.h  shaders_database.cpp  shaders_database.h  stub_window.h  utils.h  utils_outcome.h  vertex.h
src/app/: CMakeLists.txt  app_state.cpp  app_state.h  assimp_model.cpp  dx_api.h  imgui_state_debug.cpp  imgui_state_debug.h  main.cpp  model.cpp  model.h  predefined_objects.cpp  render_lines.h  render_model.cpp  render_vertices_only.cpp  render_vertices_only.h  render_with_normals.h  shaders_compiler.cpp  shaders_compiler.h  stub_window.h  utils.h  utils_outcome.h  vertex.h
src/app/shaders/: common_gooch_shading.hlsl  common_lines.hlsl  ps_basic_phong_lighting.hlsl  ps_gooch_shading.hlsl
src/app_vulkan/: CMakeLists.txt  build_shaders.ps1  main.cpp  main_staging.cpp  main_vertext.cpp  utils.h
src/app_vulkan/shaders/: frag.spv.h  shader.frag  shader.vert  shader_no_hardcoded_vertex.vert.spv.h  vert.spv.h
src/export/: CMakeLists.txt  main.cpp
src/learn_rendering/: CMakeLists.txt  render_main.cpp  utils.h
src/learn_rendering/include/: stub_window.h  utils.h
src/learn_rendering/shaders/: ps.hlsl  vs.hlsl
src/learn_rendering/src/: main.cpp
src/lr_app/: CMakeLists.txt  app_state.cpp  app_state.h  cube_model_hardcoded.cpp  dx_api.h  imgui_debug.h  imgui_state_debug.cpp  imgui_state_debug.h  io_completion_port.h  main.cpp  predefined_objects.cpp  predefined_objects.h  read_directory_changes.h  render_lines.cpp  render_lines.h  render_main.cpp  render_model.cpp  render_model.h  render_vertices_only.cpp  render_vertices_only.h  render_with_normals.cpp  render_with_normals.h  shaders_compiler.cpp  shaders_compiler.h  shaders_database.cpp  shaders_database.h  stub_window.h  utils.h
src/lr_app/shaders/: common_basic_phong_lighting.hlsl  common_ps_lines.hlsl  ps.hlsl  ps_basic_phong_lighting.hlsl  ps_gooch_shading.hlsl  ps_lines.hlsl  ps_normals.hlsl  ps_vertices_only.hlsl  vs.hlsl  vs_basic_phong_lighting.hlsl  vs_gooch_shading.hlsl  vs_lines.hlsl  vs_normals.hlsl  vs_vertices_only.hlsl
src/lr_export/: CMakeLists.txt  export_main.cpp  main.cpp
src/lr_model/: CMakeLists.txt  model.cpp  model.h  utils_outcome.h  vertex.h
src/model/: CMakeLists.txt  utils_outcome.h
tools/cmake/: utils.cmake
